added web view in ninjas link

--- a/app.json
+++ b/app.json
@@ -71,7 +71,8 @@
                 "padding": "20"
               },
               "href": {
-                "url": "http://ninjas.cl"
+                "url": "http://ninjas.cl",
+                "view" : "web"
               }
             }
           ]
