--- a/app.json
+++ b/app.json
@@ -71,9 +71,9 @@
                 "padding": "20"
               },
               "href": {
-                "url": "http://ninjas.cl",
-                "view" : "web"
-              }
+                    "url": "http://www.ninjas.cl",
+                    "view": "web"
+                  }
             }
           ]
         }
